--- a/yard.html
+++ b/yard.html
@@ -37,7 +37,7 @@
                 <source src="audio/MWOTO-ACKE B-SKIR(L.E RECORDS-0758666793).mp3">
             </audio><br><a href="audio/MWOTO-ACKE B-SKIR(L.E RECORDS-0758666793).mp3"download>Download</button><br>
 <p>Kyewulyaku by Acke B-skir. mp3</p>
-            <audio controls autoplay loop>
+            <audio controls loop>
                <source src="audio/Kwewulyaku_Acke B-skir_ft_Km_Music(BasKeys 0752774229).mp3">
             </audio><br><a href="audio/Kwewulyaku_Acke B-skir_ft_Km_Music(BasKeys 0752774229).mp3"download>Download</button><br>
             </div>
@@ -45,6 +45,7 @@
     </BODY>
 
 </html>
+
 
 
 
