--- a/yard.html
+++ b/yard.html
@@ -32,7 +32,7 @@
                 <source src="audio/[Mzikii.com]LUTENTE-ACKE BS-KIR(L.E RECORDS-0758666793).mp3">
             </audio><br>
                      <div class="a">
-                     <a href="audio/[Mzikii.com]LUTENTE-ACKE BS-KIR(L.E RECORDS-0758666793).mp3"download>Download</button>
+                     <a href="audio/[Mzikii.com]LUTENTE-ACKE BS-KIR(L.E RECORDS-0758666793).mp3"download><span>Download</span></a>
                      </div> <br>
        
  <p>Mwoto by Acke B-skir. mp3</p>
@@ -40,20 +40,21 @@
                 <source src="audio/MWOTO-ACKE B-SKIR(L.E RECORDS-0758666793).mp3">
             </audio><br>
                      <div class="a">
-                     <a href="audio/MWOTO-ACKE B-SKIR(L.E RECORDS-0758666793).mp3"download>Download</button>
+                     <a href="audio/MWOTO-ACKE B-SKIR(L.E RECORDS-0758666793).mp3"download><span>Download</span></a>
                                   </div> <br>
 <p>Kyewulyaku by Acke B-skir. mp3</p>
             <audio controls loop>
                <source src="audio/Kwewulyaku_Acke B-skir_ft_Km_Music(BasKeys 0752774229).mp3">
             </audio><br>
                         <div class="a">
-                                 <a href="audio/Kwewulyaku_Acke B-skir_ft_Km_Music(BasKeys 0752774229).mp3"download>Download</button>
+                                 <a href="audio/Kwewulyaku_Acke B-skir_ft_Km_Music(BasKeys 0752774229).mp3"download><span>Download</span></a>
                                               </div> <br>
             </div>
             
     </BODY>
 
 </html>
+
 
 
 
