--- a/yard.html
+++ b/yard.html
@@ -32,26 +32,27 @@
                 <source src="audio/[Mzikii.com]LUTENTE-ACKE BS-KIR(L.E RECORDS-0758666793).mp3">
             </audio><br>
                      <button>
-                                 <a href="audio/[Mzikii.com]LUTENTE-ACKE BS-KIR(L.E RECORDS-0758666793).mp3"download><span>Download</span></a></button>
+                                 <a href="audio/[Mzikii.com]LUTENTE-ACKE BS-KIR(L.E RECORDS-0758666793).mp3"download><span style="color:white;text-decoration: none;">Download</span></a></button>
                      <br>
        
  <p>Mwoto by Acke B-skir. mp3</p>
             <audio controls loop>
                 <source src="audio/MWOTO-ACKE B-SKIR(L.E RECORDS-0758666793).mp3">
             </audio><br>
-                  <button>   <a href="audio/MWOTO-ACKE B-SKIR(L.E RECORDS-0758666793).mp3"download><span style="color:white;">Download</span></a></button>
+                  <button>   <a href="audio/MWOTO-ACKE B-SKIR(L.E RECORDS-0758666793).mp3"download><span style="color:white;text-decoration: none;">Download</span></a></button>
                      <br> 
 <p>Kyewulyaku by Acke B-skir. mp3</p>
             <audio controls loop>
                <source src="audio/Kwewulyaku_Acke B-skir_ft_Km_Music(BasKeys 0752774229).mp3">
             </audio><br>
-               <button> <a href="audio/Kwewulyaku_Acke B-skir_ft_Km_Music(BasKeys 0752774229).mp3"download><span>Download</span></a></button>
+               <button> <a href="audio/Kwewulyaku_Acke B-skir_ft_Km_Music(BasKeys 0752774229).mp3"download><span style="color:white;text-decoration: none;">Download</span></a></button>
                      <br>
             </div>
             
     </BODY>
 
 </html>
+
 
 
 
