--- a/yard.html
+++ b/yard.html
@@ -10,7 +10,9 @@
     <BODY>
         <div class="header">
             <H1>YARD MUSIC</H1>
+                    <form action="https://www.google.com/search" method="get">
             <input class="src" type="search"placeholder="search songs">
+                    </form>
             <button value="search">search</button>
         </div>
         <div class="lin">
@@ -52,6 +54,7 @@
     </BODY>
 
 </html>
+
 
 
 
